Fixed my scrollbar mistake (#736)
* Fixed my scrollbar mistake

* Really fixed it by introducing a slightly different class for the fullview frame

* Using classnames module

--- a/client/styles/components/_preview-frame.scss
+++ b/client/styles/components/_preview-frame.scss
@@ -5,6 +5,10 @@
   border-width: 0;
 }
 
+.preview-frame--full-view {
+  position: relative;
+}
+
 .preview-frame-holder {
   display: flex;
   flex-direction: column;
